# OneDocs

./: .env.example  .gitignore  AGENTS.md  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: CNAME  index.html  script.js  styles.css
scripts/: pdf-smoke-test.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python-3.11.9-embed-amd64/: runtime-ready.json
src-tauri/python-3.11.9-embed-amd64/Scripts/: dumppdf.py  pdf2txt.py  vba_extract.py
src-tauri/src/: embedded_python.rs  lib.rs  main.rs
src/components/: AboutPanel.tsx  AnalysisSettingsPanel.tsx  AppearanceSettingsPanel.tsx  ArchiveResultDisplay.tsx  DataManagementPanel.tsx  DeveloperModePanel.tsx  FileUpload.tsx  FunctionSelector.tsx  LanguageSettingsPanel.tsx  ModelSelectionPanel.tsx  NotebookList.tsx  NotebookPanel.tsx  ProgressBar.tsx  ResultDisplay.tsx  SettingsModal.tsx  TitleBar.tsx
src/config/: logoAssets.ts  providers.ts  uiIcons.ts
src/config/prompts/: index.ts
src/hooks/: useAnalysis.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
src/pages/: About.tsx  Analysis.tsx  AnalysisResult.tsx  Archive.tsx  Discover.tsx  Landing.tsx  Settings.tsx  Tool.tsx  Tools.tsx
src/services/: api.ts  pdfImageExtractor.ts
src/services/rag/: embeddingService.ts  textChunking.ts
src/store/: useAppStore.ts
src/styles/: index.css
src/types/: index.ts  pdfjs.d.ts
src/utils/: analysisWorkflow.ts  documentProcessor.ts  markdownRenderer.ts
web/: index.html
web/static/css/: app.0aeb901c70fc1e017fa3873de32e8cfc.css
web/static/js/: app.dd6e7b0b66bfa78e8aec.js
web_src/: index.html
web_src/src/components/: Index.vue
web_src/src/components/admin/: Index.vue
web_src/src/components/common/: Feedback.vue  Notify.vue
web_src/src/components/item/: Index.vue
web_src/src/components/item/home/: HeaderRight.vue  Index.vue
web_src/src/components/item/setting/: Info.vue
web_src/src/components/message/: Index.vue
web_src/src/components/page/: Index.vue
