[package]
name = "onedocs"
version = "1.4.0"
description = "A Single Text, All is Known."
authors = ["LYOfficial"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "=2.6.0", features = [] }

[dependencies]
tauri = { version = "=2.6.0", features = [] }
tauri-runtime = "=2.9.2"
tauri-plugin-dialog = "=2.3.0"
tauri-plugin-fs = "=2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
zip = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
