[package]
name = "onedocs"
version = "1.4.0"
description = "A Single Text, All is Known."
authors = ["LYOfficial"]
edition = "2024"

[lib]
name = "onedocs_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "=2.6.0", features = [] }

[dependencies]
tauri = { version = "=2.6.0", features = [] }
tauri-runtime = "=2.9.2"
tauri-plugin-dialog = "=2.3.0"
tauri-plugin-fs = "=2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
lopdf = "0.34"
tauri-plugin-opener = "2"
image = "0.25"
base64 = "0.22"
aws-config = "1.5"
aws-credential-types = "1.2"
aws-sdk-s3 = "1.34"
dotenvy = "0.15"
printpdf = "0.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
